Rework public API and support multi-dimensional theming

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-theming",
-  "description": "Create themes for your app using css-in-js",
+  "description": "Create themes for your app using styled-components",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:thejameskyle/styled-theming.git",
@@ -22,13 +22,10 @@
     "browserify": "^14.4.0",
     "flow-bin": "^0.51.0",
     "jest": "^20.0.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "styled-components": "^2.1.1"
-  },
-  "dependencies": {
-    "create-react-class": "^15.6.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1"
   }
 }
